# ez-reqwest

./: Cargo.toml  README.md
src/: lib.rs
